Blink -> 2 cost. Alternatives/additions would be removing the green note, or nerfing the upgrade to 2->1 cost.
