@@ -1,2 +1,9 @@
 Blink -> 2 cost. Alternatives/additions would be removing the green note, or nerfing the upgrade to 2->1 cost.
+Reason: The card is an overpowering defensive option that heavilly neutralizes enemy attacks.
+I like the design and I don't want to change the effect too much, so I simply bumped the cost up.
+Adding Exhaust would be another direction that I wouldn't mind.
+I want the Rare damage mitigation options to stay relevant.
 
+Buckler Bash -> 4 Block Loss. Block Loss does not change on upgrade.
+This allows me to use Block(s) and cash in the Block from it to utilize Buckler Bash.
+Should make it mildly more effective.
